# SynQ

./: .gitignore  CHANGELOG.md  CHANGES.md  CMakeLists.txt  CODECOV_SETUP.md  COMMUNITY_ADOPTION_STRATEGY.md  COMPREHENSIVE_SCAN_ANALYSIS.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT_GUIDE_COMPREHENSIVE.md  ENHANCED_QUANTUM_SUBSYSTEM_SUMMARY.md  EXPANSION_PHASE_SUMMARY.md  FINALIZATION_REPORT.md  GETTING_STARTED.md  HALLUCINATION_ALIGNMENT_CHECK_3.md  HALLUCINATION_ALIGNMENT_CHECK_4.md  HALLUCINATION_ALIGNMENT_CHECK_5.md  LANGUAGE_INTEROPERABILITY.md  LANGUAGE_INTEROPERABILITY_EXPANDED.md  LICENSE.txt  LICENSE_COMMERCIAL.md  LICENSE_FAQ.md  MONETIZATION_PACKAGE.md  PERFORMANCE_OPTIMIZATION.md  PHASE10_ARCHITECTURE.md  PHASE10_DOCUMENTATION.md  PHASE10_FINAL_SUMMARY.md  PHASE10_IMPLEMENTATION_SUMMARY.md  PHASE10_PRODUCTION_DEPLOYMENT.md  PHASE11_PERFORMANCE_COMPILATION.md  PHASE11_STAGE1_IMPLEMENTATION_PLAN.md  PHASE12_SECURITY_HARDENING.md  PHASE13_INTEROPERABILITY.md  PHASE14_STANDARD_LIBRARY.md  PHASE15_IDE_DEVELOPER_EXPERIENCE.md  PHASE7_ARCHITECTURE.md  PHASE7_COMPLETE_DOCUMENTATION.md  PHASE8_ARCHITECTURE.md  PHASE8_COMPLETE_DOCUMENTATION.md  PHASE9_ARCHITECTURE.md  (+34 more)
compiler/src/: CMakeLists.txt
compiler/src/backend/: ai_provider.cpp  ai_provider.h  simulator.cpp
compiler/src/bindings/: CMakeLists.txt  synq_repl.cpp
compiler/src/chain/: execution_graph.py
compiler/src/cli/: CMakeLists.txt  signing_quorum.cpp  synq_chain.cpp  synq_compile.cpp  synq_debug.cpp  synq_deploy.cpp  synq_export.cpp  synq_fuzz.cpp  synq_help.cpp  synq_inspect.cpp  synq_man.cpp  synq_sign.cpp  synq_trace.cpp  synq_version.cpp
compiler/src/cloud/: cloud_trace_uploader.cpp  cloud_trace_uploader.h
compiler/src/compiler/: agentic_memory.cpp  backend_synqvm.cpp  codegen_backend.cpp  codegen_backend.h  compile_worker_server.cpp  cross_compile_manager.cpp  cross_compile_manager.h  debug_exporter.cpp  distributed_compiler.h  execution_tracer.cpp  execution_tracer.h  hotreload.cpp  hotreload.h  meta_circuit.h  parser.cpp  parser.h  pipeline_executor.cpp  plugin.cpp  plugin.h  plugin_gui_registry.cpp  plugin_registry.cpp  plugin_registry.h  plugin_store.h  repl.cpp  repl.h  runtime.cpp  symbolic.cpp  transpiler.h  visualizer.h
compiler/src/debugger/: breakpoint_manager.cpp  debug_trace_tree.cpp  debugger_ai_assist.h  debugger_core.cpp  debugger_core.h  debugger_launcher.cpp  debugger_launcher.h  debugger_terminal_ui.cpp  debugger_terminal_ui.h  debugscript.h  error_dive.cpp  exception_catcher.h  intellibreak.h  log_probe.cpp  log_probe.h  pulsewatch.cpp  pulsewatch.h  symbol_visualizer.cpp  symbol_visualizer.h  watch_list.cpp
docs/: Manual.md  (+40 more)
minimal_cmake/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/backend/: ai_provider.cpp  ai_provider.h  simulator.cpp  simulator.h
src/bindings/: synq_repl.cpp
src/chain/: execution_graph.py
src/cli/: signing_quorum.cpp  skillmap_query.cpp  synq_ai.cpp  synq_build.cpp  synq_chain.cpp  synq_compile.cpp  synq_config.cpp  synq_create.cpp  synq_debug.cpp  synq_deploy.cpp  synq_doctor.cpp  synq_export.cpp  synq_fuzz.cpp  synq_help.cpp  synq_init.cpp  synq_inspect.cpp  synq_lint.cpp  synq_man.cpp  synq_mutate.cpp  synq_plugin.cpp  synq_profile.cpp  synq_publish.cpp  synq_qtrace.cpp  synq_run.cpp  synq_sign.cpp  synq_skillmap.cpp  synq_test.cpp  synq_trace.cpp  synq_version.cpp
src/cloud/: cloud_trace_uploader.cpp  cloud_trace_uploader.h
src/compiler/: agentic_memory.cpp  agentic_memory.h  ast.cpp  ast.h  backend_factories.cpp  backend_factories.h  backend_qiskit.cpp  backend_synqvm.cpp  backend_wasm.cpp  backend_x86.cpp  codegen.cpp  codegen.h  codegen_backend.cpp  codegen_backend.h  compile_worker_server.cpp  compiler_job.h  copilot.cpp  copilot.h  copilot_whisper.cpp  cross_compile_manager.cpp  cross_compile_manager.h  debug_exporter.cpp  debug_exporter.h  distributed_compiler.cpp  distributed_compiler.h  execution_tracer.cpp  execution_tracer.h  exporter.cpp  exporter.h  hotreload.cpp  hotreload.h  meta_circuit.cpp  meta_circuit.h  model_provider.cpp  model_provider.h  parser.cpp  parser.h  pipeline_executor.cpp  pipeline_executor.h  plugin.cpp  (+28 more)
src/debugger/: breakpoint_manager.cpp  breakpoint_manager.h  callgrapghviz.cpp  callgrapghviz.h  debug_session_manager.cpp  debug_session_manager.h  debug_trace_tree.cpp  debug_trace_tree.h  debugger_ai_assist.cpp  debugger_ai_assist.h  debugger_core.cpp  debugger_core.h  debugger_launcher.cpp  debugger_launcher.h  debugger_terminal_ui.cpp  debugger_terminal_ui.h  debugscript.cpp  debugscript.h  error_dive.cpp  error_dive.h  errorwhisperer.cpp  errorwhisperer.h  exception_catcher.cpp  exception_catcher.h  ghostframe.cpp  ghostframe.h  intellibreak.cpp  intellibreak.h  live_diff_view.cpp  live_diff_view.h  log_probe.cpp  log_probe.h  pulsewatch.cpp  pulsewatch.h  runtime_heatmap.cpp  runtime_heatmap.h  step_controller.cpp  step_controller.h  symbol_visualizer.cpp  symbol_visualizer.h  (+6 more)
src/net/: log_http_server.cpp  log_http_server.h  trace_stream_server.cpp  trace_stream_server.h
src/optimizer/: optimizer.cpp  optimizer.h
src/quantum_subsystem/: quantum_walker.py  secure_storage.py  transmission_protocol.py
src/runtime/: builtin_loader.cpp  builtin_loader.h  context_snapshot.cpp  context_snapshot.h  coverage.cpp  coverage.h  debug_watch.cpp  debug_watch.h  distributed.cpp  distributed.h  docstring_resolver.cpp  docstring_resolver.h  dynamic_typifier.cpp  dynamic_typifier.h  eval_context.cpp  eval_context.h  hotreload_watchdog.cpp  hotreload_watchdog.h  live_mutator.cpp  live_mutator.h  loop_benchmark.cpp  loop_benchmark.h  meta_importer.cpp  meta_importer.h  native_package_loader.cpp  native_package_loader.h  plugin_tracer.cpp  plugin_tracer.h  quantum_prompt.cpp  quantum_prompt.h  repl_importer.cpp  repl_importer.h  repl_test_runner.cpp  repl_test_runner.h  runtime.cpp  runtime.h  runtime_dash.cpp  runtime_dash.h  runtime_engine.h  runtime_exporter.cpp  (+22 more)
src/security/: distributed_keyring.py  signer_core.py  signing_engine.py  verifier_core.py
src/ui/: debugger_overlay.cpp  debugger_overlay.h
(+762 files in other folders)
